commit fixed problems for sonar cube